search box settings changed and reported problems

--- a/views/index.html
+++ b/views/index.html
@@ -50,8 +50,8 @@
         <figure>
             
                 <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
-                <p class="items_title_EN"><strong>minecraft learn</strong></p>
-                <figcaption class="items_caption_EN">can you learn "how to play minecraft"</figcaption>
+                <p class="items_title_EN"><strong>Enter Server</strong></p>
+                <figcaption class="items_caption_EN">can you learn "How To Enter Server" </figcaption>
             
         </figure>
         </a>
