--- a/views/Office.html
+++ b/views/Office.html
@@ -24,7 +24,7 @@
                     <form role="searchbox" method="get">
                         <search>
                             <label for="search">
-                                <input type="search" name="Search" id="search" onkeyup="searchProducts(this)">
+                                <input type="search" name="Search" id="search" placeholder="Search" onkeyup="searchProducts(this)">
                                 <button type="submit" role="search">🔄</button>
                             </label>
                         </search>
@@ -95,7 +95,7 @@
 
 
     <div class="selection" data-category="School">
-    <a href="">
+    <a href="./School.html">
         <figure class="items">
             <img src="/public/images/Citywar-School.jpg" alt="" class="items_img">
             <p class="items_title_EN"><strong>School</strong></p>
