--- a/views/wallet.html
+++ b/views/wallet.html
@@ -12,7 +12,7 @@
 </head>  
 <body>  
     <header>  
-        <span><strong>Wallet</strong></span>  
+        <h1>Wallet</h1>  
         <nav>  
             <a href="index.html">Main Menu</a> <!-- لینک به صفحه اصلی -->  
             <a href="./store.html">Back To Store</a>
