--- a/public/css/events.css
+++ b/public/css/events.css
@@ -26,3 +26,7 @@ nav a {
     margin: 0 15px;  
     transition: color 0.5s;  /* انیمیشن رنگ */ 
 }
+
+nav a:hover {  
+    color: #ffa500; /* رنگ پررنگ هنگام هاور */  
+} 
