new items added

--- a/views/Office.html
+++ b/views/Office.html
@@ -105,6 +105,72 @@
     </div>
 
 
+    <div class="selection" data-category="Get Roles">
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/Citywar-Office-Roles.jpg" alt="Roles" class="items_img">
+            <p class="items_title_EN"><strong>Get Roles</strong></p>
+            <figcaption class="items_caption_EN">Get Roles for your access to the server</figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="Bank">
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/Citywar-Office-Bank.jpg" alt="Bank" class="items_img">
+            <p class="items_title_EN"><strong>Bank</strong></p>
+            <figcaption class="items_caption_EN">Create a Transaction With Server Bank</figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="Subway Station">
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/Citywar-Office-Metro.jpg" alt="Metro" class="items_img">
+            <p class="items_title_EN"><strong>Subway Station</strong></p>
+            <figcaption class="items_caption_EN">Using the subway in different situations</figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="">
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="">
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="">
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
+    </div>
+
+
     <div class="selection" data-category="">
     <a href="">
         <figure class="items">
