--- a/views/School.html
+++ b/views/School.html
@@ -97,7 +97,7 @@
 
 
     <div class="selection" data-category="Guard: Sea Guard">
-    <a href="./School.html">
+    <a href="">
         <figure class="items">
             <img src="/public/images/Citywar-Office-Sea-Guard.jpg" alt="Sea Guard" class="items_img">
             <p class="items_title_EN"><strong>Guard</strong></p>
@@ -115,6 +115,50 @@
             <figcaption class="items_caption_EN">Build magnificent buildings and houses</figcaption>
         </figure>
     </a>
+    </div>
+
+
+    <div class="selection">
+        <a href="">
+            <figure class="items">
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+            </figure>
+        </a>
+    </div>
+
+
+    <div class="selection">
+        <a href="">
+            <figure class="items">
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+            </figure>
+        </a>
+    </div>
+
+
+    <div class="selection">
+        <a href="">
+            <figure class="items">
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+            </figure>
+        </a>
+    </div>
+
+
+    <div class="selection">
+        <a href="">
+            <figure class="items">
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+            </figure>
+        </a>
     </div>
 
     
