--- a/views/store.html
+++ b/views/store.html
@@ -259,11 +259,11 @@
 
                 <!-- کیت ها -->
                     <div class="product" data-category="kits" title="Sharpness I">  
-                        <img src="/public/images/Netherite-Kit.jpg" alt="Netherite Kit  Sword">
+                        <img src="/public/images/Netherite-Kit.jpg" alt="Netherite Kit Level.1">
                         <h3>Netherite Kit</h3>
                         <p>Level.1</p>
                         <span class="price">50,000 CYT</span>
-                        <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Sword', 50000)">خرید</button>  
+                        <button class="buy-button" onclick="addToCart('Netherite Kit Level.1', 50000)">خرید</button>  
                     </div>  
 
 
@@ -296,7 +296,7 @@
                     <span class="price">55 CYT</span>  
                     <button class="buy-button" onclick="addToCart('محصول متفرقه 4', 55)">خرید</button>  
                 </div>  
-            </div>  
+            </div>
         </section>  
 
                 <!-- کیف پول -->  
