new page for "how to enter server" added

--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,7 @@
             <a href="./store.html">Store</a> 
             <a href="./Office.html">Office</a> 
             <a href="./investment.html">Investment</a>
+            <!-- <a href="./Serverstatus.html">server status</a> -->
         </nav>  
     </header>  
 
@@ -46,7 +47,7 @@
     <div id="title_label">
 
         
-        <a href="#" class="items">
+        <a href="./how-to-enter-server.html" class="items">
         <figure>
             
                 <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
