added bank services and bank page

--- a/views/Office.html
+++ b/views/Office.html
@@ -117,7 +117,7 @@
 
 
     <div class="selection" data-category="Bank">
-    <a href="">
+    <a href="./Bank.html">
         <figure class="items">
             <img src="/public/images/Citywar-Office-Bank.jpg" alt="Bank" class="items_img">
             <p class="items_title_EN"><strong>Bank</strong></p>
