Bank sections Edited

--- a/views/Bank.html
+++ b/views/Bank.html
@@ -178,22 +178,23 @@
             </div>  
 
             <!-- سوابق تراکنش -->  
-            <div id="history" class="section">  
-                <h2>سوابق تراکنش‌ها</h2>  
-                <table>  
-                    <thead>  
-                        <tr>  
-                            <th>تاریخ</th>  
-                            <th>نوع تراکنش</th>  
-                            <th>مبلغ (Balance)</th>  
-                            <th>توضیحات</th>  
-                        </tr>  
-                    </thead>  
-                    <tbody id="historyBody">  
-                        <!-- داده‌ها به صورت داینامیک درج خواهد شد -->  
-                    </tbody>  
-                </table>  
-            </div>  
+            <div id="history" class="section">
+                <h2>سوابق تراکنش‌ها</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>تاریخ</th>
+                            <th>ساعت</th> <!-- اضافه شد -->
+                            <th>نوع تراکنش</th>
+                            <th>مبلغ (تومان)</th>
+                            <th>توضیحات</th>
+                        </tr>
+                    </thead>
+                    <tbody id="historyBody">
+                        <!-- داده‌ها به صورت داینامیک درج خواهد شد -->
+                    </tbody>
+                </table>
+            </div>
 
             <!-- اقساط و بدهکاری -->  
             <!-- اقساط و بدهکاری - جدول -->  
@@ -240,6 +241,46 @@
                     <li>درخواست بکاپ حساب</li>
                     <li>درخواست دریافت Bank Account ID</li>
                 </ul>  
+
+
+                <h3>فعالسازی حساب تجاری</h3>
+                <ol>
+                    <li>کم شدن کارمزد تراکنش</li>
+                    <li>فعال شدن وام تجاری</li>
+                    <li>دریافت راحت تر وام گردش حساب</li>
+                    <li>افزایش اعتبار در بانک و ارائه خدمات ویژه کاربر های تجاری</li>
+                    <li>مدیریت راحت تر حساب</li>
+                    <li>در صورتی میتوان حساب را به تجاری تبدیل کرد که فعالیت حساب زیاد باشد</li>
+                    <li>هر بار که تعداد تراکنش شما از حدی بالاتر باشد، حساب شما لول آپ میشود و آپشن های جدیدی برای شما اضافه میشود</li>
+                    <li></li>
+                </ol>
+
+
+                <h3>تغییر پسورد ورود به بانک</h3>
+                <ol>
+                    <li>بازیابی حساب در صورتی امکان پذیر است که</li>
+                    <li></li>
+                </ol>
+
+
+                <h3>درخواست فریز کردن حساب</h3>
+                <ol>
+                    <li></li>
+                </ol>
+
+
+                <h3>درخواست بکاپ حساب</h3>
+                <ol>
+                    <li>کارمزد 5$ Balance برای بکاپ، از حساب شما کسر میشود</li>
+                    <li>هر گونه مشکلی در روند کار بانک پیش آید، اطلاعات بانک شما، در فایل بکاپ ذخیره شده است و بعد از حل مشکل، اطلاعات شما حفظ میشود</li>
+                </ol>
+
+
+                <h3>درخواست دریافت Bank Account ID</h3>
+                <ol>
+                    <li>Bank ID شما در سایت، با Bank ID شما در سرور متفاوت است و این به دلیل عدم دسترسی بقیه پلیر ها به حساب شما و انجام راحت تر تراکنش ها است</li>
+                </ol>
+
             </div>  
         </section>  
     </main>  
