--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,74 +1,49 @@
-body{
-    font-family: tahoma, sans-serif;
-    margin: 0;  
-    padding: 0;  
-    background-color: #f4f4f4;  
-}
-
-article{
-    margin: 2em;
-    padding: 15px;
-    border-radius: 7px;
-    background-color: #1c1c1c;
-    color: rgb(220, 220, 220);
-    text-align: center;
-}
-
-figcaption{
-    margin: 1.5em;
-}
-
-label{
-    font-size: large;
-}
-
-input{
-    font-size: large;
-    border-radius: 7px;
-    background-color: whitesmoke;
-    color: rgb(41, 40, 40);
-    display: inline-block;
-    gap: 0;
-}
-
-select{
-    font-size: large;
-    border-radius: 7px;
-    padding: 0px 5px;
-    text-align: left;
-}
-
-button{
-    padding: 10px 30px;
-    border-radius: 7px;
-    background-color: #29aa2d;
-    font-size: large;
-    color: rgb(220, 220, 220);
-    border: #27a22b;
-}
-
-button:hover{
-    background-color: #1e8322;
-    transition-duration: 0.6s;
-    border: #1c7a1f;
-}
-
-p{
-    margin: 6px;
-}
-
-.link{
-    text-decoration: none !important;
-    color: rgb(65, 227, 245);
-    font-size: small;
-}
-
-p.laws{
-    font-size: x-large;
-    display: inline-block;
-}
-
-.law-accept{
-    text-align: center;
+body {
+    font-family: Tahoma, sans-serif;
+    margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
+    direction: rtl;
+    color: #333;
+}
+
+input[type="text"], input[type="tel"], input[type="password"], input[type="email"] , select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 1rem;
+}
+
+button {
+    transition: background-color 0.3s;
+    width: 100%;
+     padding: 12px;
+      background: #30d773;
+       color: white;
+        border: none;
+         border-radius: 5px;
+          font-size: 16px;
+           cursor: pointer;
+}
+
+button:hover {
+    background-color: #26ad5c;
+}
+
+.link {
+    background-color: #30d773;
+    padding: 6px 12px;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.link:hover {
+    background-color: #26ad5c;
 }
