--- a/public/css/Office.css
+++ b/public/css/Office.css
@@ -9,9 +9,11 @@ header {
     color: white;  
     background: linear-gradient(to right, #1c1c1c, #333);   
     padding: 20px;
-    text-align: center;  
-    position: fixed;
+    position: sticky;
     width: 100%;  
+    z-index: 2;
+    box-sizing: border-box;
+    top: 0;
 }  
 
 header h1 {  
@@ -68,11 +70,9 @@ nav a:hover {
 
 footer{
     text-align: center;  
-    margin-top: 10em;
     padding: 10px;  
     background-color: #404040;  
     color: white;  
-    top: 90%;
 }
 
 
@@ -105,13 +105,11 @@ a{
   display: flex;
   flex-wrap: wrap;
   text-align: center;
-  margin-top: auto;
+  top: 1em;
   justify-content: center;
   padding: 0;
-  padding-top: 10em;
   gap: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin: 1em;
 }
 
 .items{
