--- a/public/css/investment.css
+++ b/public/css/investment.css
@@ -10,8 +10,10 @@ header {
     background: linear-gradient(to right, #1c1c1c, #333);   
     padding: 20px;
     text-align: center;  
-    position: fixed;
+    position: sticky;
     width: 100%;  
+    top: 0;
+    box-sizing: border-box;
 }  
 
 header h1 {  
@@ -66,7 +68,6 @@ input#search{
 
 footer{
     text-align: center;  
-    margin-top: 10em;
     padding: 10px;  
     background-color: #404040;  
     color: white;  
