--- a/public/css/store.css
+++ b/public/css/store.css
@@ -6,13 +6,15 @@ body {
 }  
 
 header {  
-    background: linear-gradient(to right, #1c1c1c, #333);  
-    color: white;  
+    color: white; 
+    background: linear-gradient(to right, #1c1c1c, #333);   
     padding: 20px;  
-    text-align: center;  
-    position: fixed;
+    position: sticky;
     width: 100%; 
+    top: 0;
+    z-index: 2;
     font-family: tahoma, sans-serif;
+    box-sizing: border-box;
 }  
 
 header h1 {  
@@ -28,7 +30,7 @@ nav {
     gap: 0.5px; /* فاصله بین لینک‌ها */
     text-align: left;
     flex-wrap: wrap;
-    transform: scale3d();
+    /* transform: scale3d(); */
 }  
 
 nav a {  
@@ -59,12 +61,11 @@ input#search{
 
 main {  
     padding: 20px;  
-    padding-top: 10em;
 }
 
 .categories {  
     text-align: center;  
-    margin-bottom: 30px;  
+    margin-bottom: 30px;
 }  
 
 .category{  
