--- a/views/investment.html
+++ b/views/investment.html
@@ -11,33 +11,11 @@
 <body>
 
     <header>  
-        <div class="header_main">
-
-            <div class="header">
-        <h1>CityWar</h1>
-        </div>
-
-                <div class="header">
-                    <div class="search-box">
-
-            <form role="searchbox" method="get">
-                <search>
-                    <label for="search">
-                        <input type="search" name="" id="search" onkeyup="searchProducts(this)">
-                        <button type="submit" role="search">🔄</button>
-                    </label>
-                </search>
-            </form>
-    
-        
-        </div> 
+        <h1>CityWar</h1>  
         <nav>  
-            <a href="./index.html">Main Menu</a>
-            <!-- <a href=""></a> -->
-
-            
+            <a href="index.html">Main Menu</a>  
         </nav>  
-    </header>
+    </header> 
 
 
     
