--- a/views/Office.html
+++ b/views/Office.html
@@ -52,7 +52,7 @@
     <div id="title_label">
 
     <div class="selection" data-category="Real Estate">
-    <a href="">
+    <a href="./Real-Estate.html">
         <figure class="items">
             <img src="/public/images/Default_citywar_minecraft_server_NFT_2.jpg" alt="Real Estate" class="items_img">
             <p class="items_title_EN"><strong>Real Estate</strong></p>
